manifests/cloudnative-pg-0.20.3.tgz-manifest.yaml
---
# Source: cloudnative-pg/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnpg-webhook-service
  labels:
    helm.sh/chart: cloudnative-pg-0.20.3
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.22.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: webhook-server
    name: webhook-server
  selector:
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: my-release
---
# Source: cloudnative-pg/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-cloudnative-pg
  labels:
    helm.sh/chart: cloudnative-pg-0.20.3
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.22.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum/config: f81c7d0fdc4fe563102cfc6e6d109a860d92921d1385c4933c2b370891e342a7
      labels:
        app.kubernetes.io/name: cloudnative-pg
        app.kubernetes.io/instance: my-release
    spec:
      containers:
      - args:
        - controller
        - --leader-elect
        - --config-map-name=cnpg-controller-manager-config
        - --webhook-port=9443
        command:
        - /manager
        image: "ghcr.io/cloudnative-pg/cloudnative-pg:1.22.2"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /readyz
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 3
        name: manager
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 3
        resources:
          {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 10001
          runAsUser: 10001
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /controller
          name: scratch-data
        - mountPath: /run/secrets/cnpg.io/webhook
          name: webhook-certificates
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: my-release-cloudnative-pg
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: scratch-data
      - name: webhook-certificates
        secret:
          defaultMode: 420
          optional: true
          secretName: cnpg-webhook-cert
---
# Source: cloudnative-pg/templates/deployment.yaml
#
# Copyright The CloudNativePG Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
# Source: cloudnative-pg/templates/monitoring-configmap.yaml
#
# Copyright The CloudNativePG Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
# Source: cloudnative-pg/templates/mutatingwebhookconfiguration.yaml
#
# Copyright The CloudNativePG Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
# Source: cloudnative-pg/templates/rbac.yaml
#
# Copyright The CloudNativePG Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
# Source: cloudnative-pg/templates/service.yaml
#
# Copyright The CloudNativePG Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
# Source: cloudnative-pg/templates/validatingwebhookconfiguration.yaml
#
# Copyright The CloudNativePG Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
# Source: cloudnative-pg/templates/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: cnpg-mutating-webhook-configuration
  labels:
    helm.sh/chart: cloudnative-pg-0.20.3
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.22.2"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: default
      path: /mutate-postgresql-cnpg-io-v1-backup
      port: 443
  failurePolicy: Fail
  name: mbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: default
      path: /mutate-postgresql-cnpg-io-v1-cluster
      port: 443
  failurePolicy: Fail
  name: mcluster.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: default
      path: /mutate-postgresql-cnpg-io-v1-scheduledbackup
      port: 443
  failurePolicy: Fail
  name: mscheduledbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduledbackups
  sideEffects: None
---
# Source: cloudnative-pg/templates/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cnpg-validating-webhook-configuration
  labels:
    helm.sh/chart: cloudnative-pg-0.20.3
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.22.2"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: default
      path: /validate-postgresql-cnpg-io-v1-backup
      port: 443
  failurePolicy: Fail
  name: vbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: default
      path: /validate-postgresql-cnpg-io-v1-cluster
      port: 443
  failurePolicy: Fail
  name: vcluster.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: default
      path: /validate-postgresql-cnpg-io-v1-scheduledbackup
      port: 443
  failurePolicy: Fail
  name: vscheduledbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduledbackups
  sideEffects: None
- admissionReviewVersions:
    - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: default
      path: /validate-postgresql-cnpg-io-v1-pooler
      port: 443
  failurePolicy: Fail
  name: vpooler.cnpg.io
  rules:
    - apiGroups:
        - postgresql.cnpg.io
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - poolers
  sideEffects: None
